# qiskit-qkd

./: README.md  pyproject.toml
docs/: architecture.md  development.md  domain_model.md  parameters.md
examples/: README.md  bb84_fiber_sweep.py  bb84_ideal.py
src/qiskit_qkd/: __init__.py  _json.py  _validation.py  reproducibility.py  timing.py
src/qiskit_qkd/analysis/: __init__.py  sweeps.py
src/qiskit_qkd/backends/: __init__.py  qiskit_sampler.py
src/qiskit_qkd/channels/: __init__.py  fiber.py  ideal.py
src/qiskit_qkd/config/: __init__.py  schema.py
src/qiskit_qkd/detectors/: __init__.py  threshold.py
src/qiskit_qkd/postprocessing/: __init__.py  key_rate.py  sifting.py
src/qiskit_qkd/protocols/: __init__.py  bb84.py
src/qiskit_qkd/qiskit_integration/: __init__.py  circuits.py
src/qiskit_qkd/results/: __init__.py  event.py  metrics.py  result.py
tests/: test_bb84_ideal.py  test_config.py  test_fiber_detector.py  test_import.py  test_qiskit_backend.py  test_qiskit_circuits.py  test_serialization.py  test_timing_detector.py
